trying to fix database bug

--- a/app/views/refugees/index.html.erb
+++ b/app/views/refugees/index.html.erb
@@ -9,7 +9,8 @@
 
 		<div class="center-block">
 	
-			<a href="#"><%= image_tag @refugee.picture.url(:thumb), class: " img-circle" %></a>
+		
+			<a href="#"></a>
 		
 		</div>
 			
